# faiss

./: .gitignore  CMakeLists.txt  RULE.md  plan2026-02-05-1839.md
benchs/: CMakeLists.txt  Makefile  bench_faiss_vsag_hgraph.py  bench_hnsw_compare.cpp  bench_hnsw_compressed.cpp  bench_hnsw_deletion.cpp  bench_hnsw_deletion_fixed.cpp  bench_minimal.py  bench_quick.py  bench_rebuild_perf.cpp  bench_storage_indirect.cpp  run_thp_test.sh  test_madvise_thp.py
faiss/: CMakeLists.txt  HNSWReorder.cpp  HNSWReorder.h  IndexBinaryHNSW.cpp  IndexFlat.cpp  IndexFlatCodes.cpp  IndexFlatCompressed.cpp  IndexFlatCompressed.h  IndexFlatShared.cpp  IndexFlatShared.h  IndexHNSW.cpp  IndexHNSWCompressed.cpp  IndexHNSWCompressed.h  IndexIDMap.cpp  IndexNNDescent.cpp  IndexNSG.cpp  IndexScalarQuantizer.cpp  SharedVectorStore.cpp  SharedVectorStore.h
faiss/impl/: DistanceComputer.h  HNSW.cpp  HNSW.h
faiss/utils/: distances.cpp  distances.h  distances_dispatch.h  distances_fp16.h  distances_fp16_simd.cpp  distances_simd.cpp  numa_helpers.h
faiss/utils/simd_impl/: distances_autovec-inl.h  distances_avx2.cpp  distances_avx512.cpp
llm/: Makefile  bench_rabitq.cpp  bench_task.cpp  build.sh  convert_10m.py  convert_parquet.py  download_msmarco_websearch.py  just_download.py  table.md  todo.md  v0_build.sh
llm/arch-2026-04-07/: benchmark-report.md  rabitq-benchmark-report.md
llm/arch-2026-04-08/: optimization-report-design.md  optimization-report-en.md  optimization-report.md
llm/arch-2026-04-10/: M16-sweep-results.md  M32-sweep-results.md  M48-sweep-results.md  V0-parameter-sweep-report.md  V0-sweep-results.md  parameter-sweep-report.md
llm/arch-2026-04-12/: 00-apend-flush.md
llm/arch-2026-04-13/: data.md
llm/arch-2026-04-15/: derive_msmarco_subset.py
llm/database/: 20M_30M_dataset.md
llm/faiss-1.14.1-origin/: bench.cpp
llm/optimize-faiss/: QPS分析-2026-04-02-table-en.md  QPS分析-2026-04-02-table.md  QPS分析-2026-04-02.md  design.md  faiss-index-type-2026-02-12.md
llm/optimize-faiss/faiss/: design_v1.md  faiss_vs_vsag.md
llm/optimize-faiss/faiss-1.13.1/: 00-faiss-optimize.md  05-所有的搜索方案.md  Openmp-Optimize.md  优化方案-bench1-bf16-fp16.md  优化方案-bench2-hnsw-opt.md
llm/optimize-faiss/faiss/perf-test/: GIST-960.md  GloVe-100.md  NYTimes-256.md  README.md  SIFT-1M.md  TEST_REPORT.md  shared-storage-总结-2026-02-12.md  总结.md
llm/optimize-faiss/faiss/可以做的优化/: 00-search-diff.md
llm/optimize-faiss/faiss/可以做的优化/arch-2026-04-01/: 01-opt-plan.md
llm/results/phase3/: optimize-all-port-to-v1.14.1.md
perf_tests/: CMakeLists.txt  bench_shared_store.cpp
tests/: CMakeLists.txt  test_distances_fp16.cpp
可以做的优化/: 0001-perf-eliminate-10MB-VisitedTable-malloc-free-per-sea.patch
可以做的优化/arch-2026-04-01/: README.md
